--- a/pages/playlist/playlist.wxml
+++ b/pages/playlist/playlist.wxml
@@ -17,25 +17,28 @@
       </view>
     </view>
   </view>
-  <view class="songlist">
-    <view class="list" wx:for="{{songlist}}" wx:key="id" data-index="{{index}}" bindtap="play">
-      <view class="index">
-        <text>{{index+1}}</text>
-      </view>
-      <view class="son">
-        <text class="songname">{{item.name}}</text>
-        <view class="aut">
-          <text class="dujia">独家</text>
-          <text class="au">{{item.ar[0].name}}-{{item.al.name}}</text>
+  <scroll-view scroll-y>
+    <view class="songlist">
+      <view class="list" wx:for="{{songlist}}" wx:key="id" data-index="{{index}}" bindtap="play">
+        <view class="index">
+          <text>{{index+1}}</text>
+        </view>
+        <view class="son">
+          <text class="songname">{{item.name}}</text>
+          <view class="aut">
+            <text class="dujia">独家</text>
+            <text class="au">{{item.ar[0].name}}-{{item.al.name}}</text>
+          </view>
+        </view>
+        <view class="bof">
+          <text></text>
+          <image src="{{index===index1 ? '/images/play/laba.png':'/images/play/bofang.png'}}"></image>
         </view>
       </view>
-      <view class="bof">
-        <text></text>
-        <image src="{{index===index1 ? '/images/play/laba.png':'/images/play/bofang.png'}}"></image>
-      </view>
     </view>
-  </view>
+  </scroll-view>
 </view>
+
 <view class="audio">
   <slider max="{{duration}}" block-size="12" value="{{currentTime}}" bindchange="change" selected-color="red"></slider>
   <audio id="myAudio" poster="{{poster}}" name="{{name}}" author="{{author}}" src="{{src}}" controls loop bindtimeupdate='bindtimeupdate' bindplay="audioplay" bindpause="audiopause">
