--- a/pages/search/index.wxss
+++ b/pages/search/index.wxss
@@ -7,14 +7,13 @@ page {
   display: flex;
 }
 .search_row input {
-  background-color: #fff;
+  background-color:rgb(250, 250, 250);
   flex: 1;
-  height: 100%;
-  padding-left: 30rpx;
+  height: 75rpx;
 }
 .search_row button {
   width: 110rpx;
-  height: 100%;
+  height: 75rpx;
   padding: 0;
   margin: 0 10rpx;
   display: flex;
