--- a/pages/singerSongs/singerSongs.wxss
+++ b/pages/singerSongs/singerSongs.wxss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: row;
 }
+
 .desc image {
   width: 40%;
   /* width: 200rpx; */
@@ -60,7 +61,7 @@
   background-color: rgb(250, 250, 250);
   width: 100%;
   border-radius: 20rpx;
-  margin-bottom: 150rpx
+  margin-bottom: 150rpx;
 }
 
 .list {
@@ -129,28 +130,30 @@
   background-color: #fff;
   display: flex;
   flex-direction: column;
+  z-index: 1;
 }
-slider{
+
+slider {
   height: 0px;
   width: 750rpx;
-  margin-bottom:20rpx;
+  margin-bottom: 20rpx;
   margin-top: 0rpx;
   margin-left: 0;
 }
-.lrb{
+
+.lrb {
   display: flex;
-  flex-direction: row
-}
-.lrb{
-  z-index: 1;
+  flex-direction: row;
+  z-index: 999;
   margin-left: 500rpx;
-  position: fixed ;
+  position: fixed;
   left: 0;
   bottom: 0;
 }
-.lrb cover-image{
+
+.lrb cover-image {
   width: 60rpx;
   height: 60rpx;
   margin-right: 30rpx;
-  margin-bottom: 30rpx
+  margin-bottom: 30rpx;
 }
