--- a/pages/tags/tags.wxss
+++ b/pages/tags/tags.wxss
@@ -51,11 +51,25 @@ page {
   width: 50%;
   text-align: center;
 }
-.cates .cates_container .right_content .singers_group .singers_list navigator image {
+.img {
   width: 200rpx;
   height: 150rpx
 }
 .singers_name{
   font-size: 10px
 }
-
+.count{
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center
+}
+.count image{
+  width: 23rpx;
+  height: 23rpx;
+  margin-right:15rpx;
+  margin-left: 100rpx
+}
+.count text{
+  font-size: 10px;
+}
