--- a/pages/playlist/playlist.wxml
+++ b/pages/playlist/playlist.wxml
@@ -10,6 +10,8 @@
         <image src="{{artImg}}"></image>
         <text>{{album.artist}}</text>
         <text class="it">></text>
+        <image src="/images/play/favorite.png" class="favorite" bindtap="favorited" hidden="{{favorite!==-1}}"></image>
+        <image src="/images/play/favorited.png" class="favorite" bindtap="favorite" hidden="{{favorite===-1}}"></image>
       </view>
       <view class="descd">
         <text>{{desc}}...</text>
@@ -42,11 +44,13 @@
 <view class="audio">
   <slider max="{{duration}}" block-size="12" value="{{currentTime}}" bindchange="change" selected-color="red"></slider>
   <audio id="myAudio" poster="{{poster}}" name="{{name}}" author="{{author}}" src="{{src}}" controls loop bindtimeupdate='bindtimeupdate' bindplay="audioplay" bindpause="audiopause">
-    <view class="lrb">
-      <cover-image src="/images/play/left.png" class="left" bindtap="previous"></cover-image>
-      <cover-image src="{{play ? '/images/play/bof.png':'/images/play/bofang.png'}}" class="cen" bindtap="clickplay"></cover-image>
-      <cover-image src="/images/play/right.png" class="right" bindtap="next"></cover-image>
-    </view>
+    
 
   </audio>
+  
 </view>
+<view class="lrb">
+      <image src="/images/play/left.png" class="left" bindtap="previous"></image>
+      <image src="{{play ? '/images/play/bof.png':'/images/play/bofang.png'}}" class="cen" bindtap="clickplay"></image>
+      <image src="/images/play/right.png" class="right" bindtap="next"></image>
+    </view>
