--- a/pages/singerSongs/singerSongs.wxml
+++ b/pages/singerSongs/singerSongs.wxml
@@ -4,6 +4,8 @@
     <view class="right">
       <view class="title">
         <text class="">{{singername}}:  </text>
+        <image src="/images/play/favorite.png" class="favorite" bindtap="favorited" hidden="{{favorite!==-1}}"></image>
+        <image src="/images/play/favorited.png" class="favorite" bindtap="favorite" hidden="{{favorite===-1}}"></image>
       </view>
       <view class="descd">
         <text>{{desc}}...</text>
@@ -34,9 +36,9 @@
   <slider max="{{duration}}" block-size="12" value="{{currentTime}}" bindchange="change" selected-color="red"></slider>
   <audio id="myAudio" poster="{{poster}}" name="{{name}}" author="{{author}}" src="{{src}}" controls loop bindtimeupdate='bindtimeupdate' bindplay="audioplay" bindpause="audiopause">
     <view class="lrb">
-      <cover-image src="/images/play/left.png" class="left" bindtap="previous"></cover-image>
-      <cover-image src="{{play ? '/images/play/bof.png':'/images/play/bofang.png'}}" class="cen" bindtap="clickplay" data-index="{{index1}}"></cover-image>
-      <cover-image src="/images/play/right.png" class="right" bindtap="next"></cover-image>
+      <image src="/images/play/left.png" class="left" bindtap="previous"></image>
+      <image src="{{play ? '/images/play/bof.png':'/images/play/bofang.png'}}" class="cen" bindtap="clickplay" data-index="{{index1}}"></image>
+      <image src="/images/play/right.png" class="right" bindtap="next"></image>
     </view>
   </audio>
 
