--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -64,7 +64,7 @@
   </view>
   <view class="ktv">
     <image src="/images/play/ktv.png"></image>
-    <text>新专辑发布</text>
+    <text>新品推荐</text>
   </view>
   <view class="index">
     <navigator wx:for="{{ktvList}}" wx:key="id" url="/pages/albums/albums?id={{item.id}}">
@@ -94,3 +94,4 @@
     </navigator>
   </view>
 </view>
+<Play img="{{img}}"></Play>
