--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,34 +1,53 @@
-<view class="cates">
-  <SearchInput></SearchInput>
-  <view class="cates_container">
-    <!-- 左侧菜单 -->
-    <scroll-view scroll-y class="left_menu">
-      <view
-      class="{{index===currentIndex?'active':'menu_item '}}"
-      wx:for="{{leftMenuList}}"
-      wx:key="*this"
-      bindtap="handleItemTap"
-      data-index="{{index}}"
-      data-type="{{item.type}}"
-      data-area="{{item.area}}"
-      >
-      {{item.name}}
-      </view>
-    </scroll-view>
-    <!-- 右侧商品内容 -->
-    <scroll-view scroll-top="{{scrollTop}}" scroll-y class="right_content">
-      <view class="singers_group">
-        <view class="singers_list">
-          <navigator
-          wx:for="{{rightContent}}"
-          wx:key="id"
-          url="/pages/singerhotsong/singerhotsong?id={{item.id}}&name={{item.name}}"
-          >
-          <image src="{{item.picUrl}}"></image>
-          <view class="singers_name">{{item.name}}</view>
+<view class="container">
+  <view class="top">
+
+    <view class="user">
+      <image src='http://8.129.165.149/music/{{user.image}}' class="avatar" hidden="{{user.image===null}}"></image>
+      <image src='/images/my/avator.png' class="avatar" hidden="{{user.image!==null}}"></image>
+      <view class="info">
+        <text class="nickname">{{user.nickname===null?username:user.nickname}}</text>
+        <view class="more">
+          <text>关注</text>
+          <text>|</text>
+          <text>粉丝</text>
+          <navigator url="/pages/setting/setting" class="edit">
+            <text>编辑</text>
+          </navigator>
+          <navigator url="/pages/setting/setting" class="bg">
+            <text>更换背景</text>
           </navigator>
         </view>
       </view>
-    </scroll-view>
+    </view>
+  </view>
+  <view class="center">
+    <view class="index">
+      <navigator wx:for="{{classlist}}" wx:key="id" url="{{item.url}}">
+        <view class="index2">
+          <view class="image">
+            <image src="{{item.path}}"></image>
+          </view>
+          <view class="text2">
+            <text>{{item.text}}</text>
+          </view>
+        </view>
+      </navigator>
+    </view>
+  </view>
+  <view class="bottom">
+    <view class="song">
+      <view class="recent">
+      <navigator url="/pages/recentlyPlay/recentlyPlay">
+      <text>最近在听>></text>
+      </navigator>
+      </view>
+      <view class="recentlyPlay">
+        <navigator wx:for="{{recentlyList}}" wx:key="id">
+            <image src="{{item.picUrl}}"></image>
+            <text>{{item.name}}</text>
+            <text>{{item.singer}}</text>
+        </navigator>
+      </view>
+    </view>
   </view>
 </view>
