--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -1,61 +1,129 @@
-page {
-  height: 100%;
+.top{
+  width: 100%;
+  height: 300rpx;
+  background-color: #DC143C;
 }
-.cates {
-  height: 100%;
+.top .user{
+  display: flex;
+  flex-direction: column;
 }
-.cates .cates_container {
-  /* less中使用calc的时候要注意 */
-  height: calc( 100vh - 90rpx );
+.top .user .avatar{
+  width: 150rpx;
+  height: 150rpx;
+  border-radius: 98rpx;
+  margin-left: 20rpx;
+}
+.top .user text{
+  margin-top: 20rpx;
+  margin-left: 20rpx;
+}
+.user .info{
+  display: flex;
+  flex-direction: column;
+}
+.nickname{
+  font-size: 16px;
+  margin-left: 10rpx;
+  color: rgb(255, 255, 255)
+}
+.edit{
+  width: 85rpx;
+  height: 50rpx;
+  margin-left: 300rpx;
+  margin-top: 10rpx;
+  border-radius: 50rpx;
+  background-color: rgb(134, 131, 131);
   display: flex;
 }
-.cates .cates_container .left_menu {
-  /* 子项 高度 100% flex */
-  flex: 2;
-}
-.cates .cates_container .left_menu .menu_item {
-  height: 80rpx;
+.edit text{
+  font-size: 12px;
   display: flex;
-  justify-content: center;
+  color: rgb(255, 255, 255) !important;
+  align-content: center;
   align-items: center;
-  font-size: 30rpx;
+  margin-bottom: 20rpx;
 }
-.cates .cates_container .left_menu .active {
-  height: 80rpx;
+.bg{
+  width: 130rpx;
+  height: 50rpx;
+  margin-left: 30rpx;
+  margin-top: 10rpx;
+  border-radius: 50rpx;
+  background-color: rgb(134, 131, 131);
   display: flex;
-  justify-content: center;
+}
+.bg text{
+  font-size: 12px;
+  display: flex;
+  color: rgb(255, 255, 255) !important;
+  align-content: center;
   align-items: center;
-  font-size: 30rpx;
-  color: red;
-  border-left: 5rpx solid currentColor;
+  margin-bottom: 20rpx;
 }
-.cates .cates_container .right_content {
-  /* 子项 高度 100% flex */
-  flex: 5;
-}
-.cates .cates_container .right_content .singers_group .singers_title {
-  height: 80rpx;
+.more{
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
 }
-.cates .cates_container .right_content .singers_group .singers_title .delimiter {
-  color: #ccc;
-  padding: 0 10rpx;
+.more text{
+  font-size: 10px;
+  color: rgb(196, 190, 190);
+  font-weight: bold
 }
-.cates .cates_container .right_content .singers_group .singers_list {
+.index{
   display: flex;
+  display: -webkit-flex;
+  justify-content: space-between;
+  flex-direction: row;
   flex-wrap: wrap;
 }
-.cates .cates_container .right_content .singers_group .singers_list navigator {
-  width: 33.33%;
+.index2 {
+  display: flex;
+  flex-direction: column;
+  width: 60px;
+  align-items: center;
+  margin-top: 10rpx;
+}
+.image{
+  width: 110rpx;
+  height: 110rpx;
+  border-radius:40px;
+}
+.index image{
+  width: 80rpx;
+  height: 80rpx;
+  margin: 15rpx
+}
+.singer{
+  background-color: rgb(255, 255, 255);
+  height: 360rpx
+}
+.text2{
+  font-size: 12px;
+}
+.recent{
+  margin-top: 20rpx;
+  margin-left: 25rpx;
+  font-weight: bold
+}
+.recent navigator{
+  width: 210rpx
+}
+.recentlyPlay image{
+  margin-top: 20rpx;
+  width: 200rpx;
+  height: 200rpx;
+  border-radius: 20rpx
+}
+.recentlyPlay {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 12px
+}
+.recentlyPlay navigator{
+  width: 30%;
   text-align: center;
-}
-.cates .cates_container .right_content .singers_group .singers_list navigator image {
-  width: 120rpx;
-  height: 100rpx
-}
-.singers_name{
-  font-size: 10px
-}
+  display: flex;
+  flex-direction: column;
+  margin-left: 20rpx
 
+}
