--- a/pages/singerhotsong/singerhotsong.wxml
+++ b/pages/singerhotsong/singerhotsong.wxml
@@ -34,9 +34,9 @@
   <slider max="{{duration}}" block-size="12" value="{{currentTime}}" bindchange="change" selected-color="red"></slider>
   <audio id="myAudio" poster="{{poster}}" name="{{name}}" author="{{author}}" src="{{src}}" controls loop bindtimeupdate='bindtimeupdate' bindplay="audioplay" bindpause="audiopause">
   <view class="lrb">
-  <cover-image src="/images/play/left.png" class="left" bindtap="previous"></cover-image>
-    <cover-image src="{{play ? '/images/play/bof.png':'/images/play/bofang.png'}}" class="cen" bindtap="clickplay" data-index="{{index1}}"></cover-image>
-    <cover-image src="/images/play/right.png" class="right" bindtap="next"></cover-image>
+  <image src="/images/play/left.png" class="left" bindtap="previous"></image>
+    <image src="{{play ? '/images/play/bof.png':'/images/play/bofang.png'}}" class="cen" bindtap="clickplay" data-index="{{index1}}"></image>
+    <image src="/images/play/right.png" class="right" bindtap="next"></image>
   </view>
     
   </audio>
